Fixed bugs introduced
